# penx

./: .env.example  .eslintrc.json  .gitignore  .npmrc  .prettierrc  DATABASE_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  index.html  lingui.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replaceTransId.js  test.tsx  turbo.json
.github/workflows/: desktop-publish.yml  publish.yml  release.yml  tauri-ci.yml  tauri-desktop-publish.yml
apps/desktop/: .env  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  AuthProvider.tsx  ConnectWallet.tsx  Login.tsx  Updater.ts  WalletInfo.tsx  account.tsx.tsx  config.ts  style.css  wallet-options.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  server.rs
apps/docs/: package.json
apps/electron/: .env  .gitignore  DATABASE_USAGE.md  drizzle.config.ts  electron-builder.yml  electron.vite.config.ts  forge.config.ts  lingui.config.bak.js  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.renderer.config.ts
apps/electron/src/: index.css  main.ts  renderer.tsx  schema.ts
apps/extension/: .env  .gitignore  components.json  lingui.config.js  package.json  postcss.config.mjs  style.css  tsconfig.json  wxt.config.ts
apps/extension/components/: Login.tsx  Logo.tsx  ThemeProvider.tsx  command-components.tsx  providers.tsx
apps/extension/entrypoints/: background.ts  sidepanel.html
apps/extension/hooks/: useLocalAreas.ts  useLocalFields.ts  useSession.ts
apps/extension/lib/: WebSocketClient.ts  api.ts  askQuestion.ts  constants.ts  getChromeVersion.ts  helper.ts  initTranslate.ts  message.ts  parser.ts  pglite-utils.ts  storage.ts  syncBookmarks.ts  syncTabs.ts  utils.ts  watchAuth.ts
apps/extension/locales/: de.po  en.po  fr.po  ja.po  ko.po  pseudo.po  ru.po  zh-CN.po
apps/mobile/: .env  .env.production  .gitignore  capacitor.config.json  capacitor.config.ts  capacitor.configbak.json  index.html  ionic.config.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  tsconfig.json  vite.config.ts
apps/mobile/android/: capacitor.settings.gradle
apps/mobile/app/: layout.tsx  page.tsx
apps/mobile/components/: AppShell.tsx  AreasPopover.tsx  CreationInputToolbar.tsx  CreationInputToolbarBak2.tsx  MobileAddCreationButton.tsx  MobileCreation.tsx  MobileHome.tsx
apps/mobile/mock/: index.ts
apps/mobile/src/: App.tsx  AppInitializer.tsx  main.tsx  (+2 more)
apps/tauri/: components.json  tsconfig.json  vite.config.ts
apps/web/: .env  .gitignore  README.md  appRouterI18n.ts  components.json  globals.css  index.d.ts  initLingui.tsx  lingui.config.js  middleware.ts  next.config.mjs  package.json  postcss.config.mjs  test.ts  tsconfig.json
extension-samples/mix/: manifest.json  package.json
server/db/: schema.ts
(+1897 files in other folders)
