[package]
name = "PenX"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "penx_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.22", features = [] }

actix-web = "4"
actix-cors = "0.6.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
open = "4.1.0"
tauri-plugin-clipboard = "2.0.0-beta.1"
window-shadows = "0.2.2"
window-vibrancy = "0.5.0"
auto-launch = "0.4.0"
rust_search = "2.1.0"
plist = "1"
strsim = "0.10.0"
directories = "4.0.1"
smartcalc = { git = "https://github.com/ParthJadhav/smartcalc", branch = "stable" }
chrono-tz = { version = "0.6.1", default-features = false }
num-format = { version = "0.4", features = ["with-system-locale"] }
localzone = "0.2.0"
sys-locale = "0.2.3"

chrono = "0.4"
objc = "0.2.7"
tauri-plugin-fs = "2.0.0-beta.9"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-os = "2.0.0-beta.6"
tauri-plugin-http = "2.0.0-beta.9"
urlencoding = "2.1.3"
tauri-plugin-jarvis = { path = "../../../packages/tauri-plugin-jarvis"}

# MacOS
[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.1"
objc = "0.2.7"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.6"
