[package]
name = "penx-desktop"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "penx_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

actix-web = "4"
actix-cors = "0.6.5"
rusqlite = { version = "0.31.0", features = ["bundled"] }
open = "4.1.0"
auto-launch = "0.4.0"
urlencoding = "2.1.3"
tauri-plugin-process = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-notification = "2.2.0"
tauri-plugin-http = "2.2.0"
tauri-plugin-fs = "2.2.1"
tauri-plugin-shell = "2.2.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-updater = "2.0.2"
tauri-plugin-process = "2.2.0"
